--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://shivanisundararamoorthy16_db_user:4I2NISYOSzME1WOj@clust
 
 PORT=5000
 JWT_SECRET=thisisasecretkeyforjw
+ML_API_URL=http://localhost:8000
