Integrated full pipeline: React frontend, Node backend, Flask ML API with working analysis flow

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb+srv://shivanisundararamoorthy16_db_user:4I2NISYOSzME1WOj@clust
 PORT=5000
 JWT_SECRET=thisisasecretkeyforjw
 ML_API_URL=http://localhost:8000
+FRONTEND_ORIGIN=http://localhost:3000
